class Archivo
{
private:
    /* data */
public:
    Archivo(/* args */) {}
    ~Archivo() {}
};