#pragma once

class Vector
{
private:
    int posX;
    int posY;
public:
    Vector(/* args */) {}
    ~Vector() {}
};